added ipynb for isobars (gpkg from ncdf)

--- a/GFS/GFS_get_accessUrls.ipynb
+++ b/GFS/GFS_get_accessUrls.ipynb
@@ -71,7 +71,7 @@
     {
      "data": {
       "text/plain": [
-       "['Forecast Model Data', 'Forecast Products and Analyses', 'Observation Data', 'Radar Data', 'Satellite Data', 'Unidata case studies']"
+       "['Forecast Model Data', 'Forecast Products and Analyses', 'Radar Data', 'Satellite Data', 'Text Products', 'Unidata case studies']"
       ]
      },
      "execution_count": 2,
@@ -179,7 +179,7 @@
     {
      "data": {
       "text/plain": [
-       "['GEFS Members - Analysis', 'GEFS Members - Forecasts', 'GEFS Derived Forecast Products', 'GFS Quarter Degree Analysis', 'GFS Quarter Degree Forecast', 'GFS Half Degree Analysis', 'GFS Half Degree Forecast', 'GFS One Degree Analysis', 'GFS One Degree Forecast', 'GFS Global 1.0 Degree (NOAAPORT)', 'GFS Pacific 20km', 'GFS Puerto Rico Quarter Degree', 'GFS CONUS 80km', 'GFS CONUS 20km', 'GFS Alaska 20km', 'GSD HRRR CONUS 3km wrfprs', 'GSD HRRR CONUS 3km surface', 'NCEP HRRR CONUS 2.5km Analysis', 'NCEP HRRR CONUS 2.5km', 'NAM Alaska 11km', 'NAM Alaska 45km from NOAAPORT', 'NAM Alaska 45km from CONDUIT', 'NAM Alaska 95km', 'NAM CONUS 12km from NOAAPORT', 'NAM CONUS 12km from CONDUIT', 'NAM CONUS 20km', 'NAM CONUS 40km', 'NAM CONUS 80km', 'NAM Polar 90km', 'NAM Fireweather Nested', 'Rapid Refresh CONUS 13km', 'Rapid Refresh CONUS 20km', 'Rapid Refresh CONUS 40km', 'SREF CONUS 40km Ensemble Derived Products', 'SREF CONUS 40km Ensemble Derived Products (Bias Corrected)', 'SREF Alaska 45km Ensemble Derived Products', 'SREF Pacific North East 0.4 Degree Ensemble Derived Products', 'Wave Watch III Global', 'Wave Watch III Regional Alaska', 'Wave Watch III Coastal Alaska', 'Wave Watch III Regional Eastern Pacific', 'Wave Watch III Regional US East Coast', 'Wave Watch III Regional US West Coast', 'Wave Watch III Coastal US East Coast', 'Wave Watch III Coastal US West Coast', 'RDPS North America 15km', 'FNMOC NAVGEM Global 0.5 Degree', 'FNMOC WW3 Global 1.0 Degree', 'FNMOC WW3 Europe', 'FNMOC FAROP Global 1.0 Degree', 'FNMOC COAMPS Western Atlantic', 'FNMOC COAMPS Europe', 'FNMOC COAMPS Equatorial America', 'FNMOC COAMPS Northeast Pacific', 'FNMOC COAMPS Southern California', 'FNMOC NCODA Global Ocean']"
+       "['GFS Quarter Degree Analysis', 'GFS Quarter Degree Forecast', 'GFS Half Degree Analysis', 'GFS Half Degree Forecast', 'GFS One Degree Analysis', 'GFS One Degree Forecast', 'GFS Global 1.0 Degree (NOAAPORT)', 'GFS Pacific 20km', 'GFS Puerto Rico Quarter Degree', 'GFS CONUS 80km', 'GFS CONUS 20km', 'GFS Alaska 20km', 'HRRR CONUS 2.5km Analysis', 'HRRR CONUS 2.5km Forecasts', 'NAM Alaska 11km', 'NAM Alaska 45km from NOAAPORT', 'NAM Alaska 45km from CONDUIT', 'NAM Alaska 95km', 'NAM CONUS 12km from NOAAPORT', 'NAM CONUS 12km from CONDUIT', 'NAM CONUS 20km', 'NAM CONUS 40km', 'NAM CONUS 80km', 'NAM Polar 90km', 'NAM Fireweather Nested', 'Rapid Refresh CONUS 13km', 'Rapid Refresh CONUS 20km', 'Rapid Refresh CONUS 40km', 'SREF CONUS 40km Ensemble Derived Products', 'SREF CONUS 40km Ensemble Derived Products (Bias Corrected)', 'SREF Alaska 45km Ensemble Derived Products', 'SREF Pacific North East 0.4 Degree Ensemble Derived Products', 'Wave Watch III Global', 'Wave Watch III Regional Eastern Pacific', 'Wave Watch III Regional US East Coast', 'Wave Watch III Regional US West Coast', 'RDPS North America 15km', 'FNMOC NAVGEM Global 0.5 Degree', 'FNMOC WW3 Global 1.0 Degree', 'FNMOC WW3 Europe', 'FNMOC COAMPS Western Atlantic', 'FNMOC COAMPS Europe', 'FNMOC COAMPS Northeast Pacific', 'FNMOC COAMPS Southern California', 'FNMOC NCODA Global Ocean']"
       ]
      },
      "execution_count": 4,
@@ -287,13 +287,14 @@
      "data": {
       "text/plain": [
        "{'OPENDAP': 'https://thredds.ucar.edu/thredds/dodsC/grib/NCEP/GFS/Global_0p25deg/Best',\n",
-       " 'WCS': 'https://thredds.ucar.edu/thredds/wcs/grib/NCEP/GFS/Global_0p25deg/Best',\n",
-       " 'WMS': 'https://thredds.ucar.edu/thredds/wms/grib/NCEP/GFS/Global_0p25deg/Best',\n",
-       " 'NetcdfSubset': 'https://thredds.ucar.edu/thredds/ncss/grib/NCEP/GFS/Global_0p25deg/Best',\n",
        " 'CdmRemote': 'https://thredds.ucar.edu/thredds/cdmremote/grib/NCEP/GFS/Global_0p25deg/Best',\n",
+       " 'JupyterNotebook': 'https://thredds.ucar.edu/thredds/notebook/grib/NCEP/GFS/Global_0p25deg/Best',\n",
+       " 'NetcdfSubset': 'https://thredds.ucar.edu/thredds/ncss/grid/grib/NCEP/GFS/Global_0p25deg/Best',\n",
+       " 'WMS': 'https://thredds.ucar.edu/thredds/wms/grib/NCEP/GFS/Global_0p25deg/Best',\n",
+       " 'WCS': 'https://thredds.ucar.edu/thredds/wcs/grib/NCEP/GFS/Global_0p25deg/Best',\n",
+       " 'ISO': 'https://thredds.ucar.edu/thredds/iso/grib/NCEP/GFS/Global_0p25deg/Best',\n",
        " 'NCML': 'https://thredds.ucar.edu/thredds/ncml/grib/NCEP/GFS/Global_0p25deg/Best',\n",
-       " 'UDDC': 'https://thredds.ucar.edu/thredds/uddc/grib/NCEP/GFS/Global_0p25deg/Best',\n",
-       " 'ISO': 'https://thredds.ucar.edu/thredds/iso/grib/NCEP/GFS/Global_0p25deg/Best'}"
+       " 'UDDC': 'https://thredds.ucar.edu/thredds/uddc/grib/NCEP/GFS/Global_0p25deg/Best'}"
       ]
      },
      "execution_count": 6,
@@ -335,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-11T11:40:12.902069Z",
@@ -346,10 +347,10 @@
     {
      "data": {
       "text/plain": [
-       "Best GFS Quarter Degree Forecast Time Series"
+       "Unidata THREDDS Data Server - NCEP models/NCEP Forecast Models/Global Forecast System (GFS)/GFS Quarter Degree - Global Coverage/GFS Quarter Degree Forecast"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -358,9 +359,9 @@
       "application/javascript": [
        "\n",
        "            setTimeout(function() {\n",
-       "                var nbb_cell_id = 10;\n",
-       "                var nbb_unformatted_code = \"best_gfs = TDSCatalog(\\n    catalog_url=\\\"http://thredds.ucar.edu/thredds/catalog/grib/NCEP/GFS/\\\"\\n    \\\"Global_0p25deg/catalog.xml\\\"\\n)\\nbest_gfs.datasets[1]\";\n",
-       "                var nbb_formatted_code = \"best_gfs = TDSCatalog(\\n    catalog_url=\\\"http://thredds.ucar.edu/thredds/catalog/grib/NCEP/GFS/\\\"\\n    \\\"Global_0p25deg/catalog.xml\\\"\\n)\\nbest_gfs.datasets[1]\";\n",
+       "                var nbb_cell_id = 7;\n",
+       "                var nbb_unformatted_code = \"best_gfs = TDSCatalog(\\n    catalog_url=\\\"http://thredds.ucar.edu/thredds/catalog/grib/NCEP/GFS/\\\"\\n    \\\"Global_0p25deg/catalog.xml\\\"\\n)\\nbest_gfs\";\n",
+       "                var nbb_formatted_code = \"best_gfs = TDSCatalog(\\n    catalog_url=\\\"http://thredds.ucar.edu/thredds/catalog/grib/NCEP/GFS/\\\"\\n    \\\"Global_0p25deg/catalog.xml\\\"\\n)\\nbest_gfs\";\n",
        "                var nbb_cells = Jupyter.notebook.get_cells();\n",
        "                for (var i = 0; i < nbb_cells.length; ++i) {\n",
        "                    if (nbb_cells[i].input_prompt_number == nbb_cell_id) {\n",
@@ -391,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-11T11:40:45.496472Z",
@@ -404,8 +405,8 @@
       "application/javascript": [
        "\n",
        "            setTimeout(function() {\n",
-       "                var nbb_cell_id = 11;\n",
-       "                var nbb_unformatted_code = \"bestDS= best_gfs.datasets[1]\";\n",
+       "                var nbb_cell_id = 8;\n",
+       "                var nbb_unformatted_code = \"bestDS = best_gfs.datasets[1]\";\n",
        "                var nbb_formatted_code = \"bestDS = best_gfs.datasets[1]\";\n",
        "                var nbb_cells = Jupyter.notebook.get_cells();\n",
        "                for (var i = 0; i < nbb_cells.length; ++i) {\n",
@@ -433,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-11T11:40:59.903538Z",
@@ -445,16 +446,17 @@
      "data": {
       "text/plain": [
        "{'OPENDAP': 'https://thredds.ucar.edu/thredds/dodsC/grib/NCEP/GFS/Global_0p25deg/Best',\n",
-       " 'WCS': 'https://thredds.ucar.edu/thredds/wcs/grib/NCEP/GFS/Global_0p25deg/Best',\n",
-       " 'WMS': 'https://thredds.ucar.edu/thredds/wms/grib/NCEP/GFS/Global_0p25deg/Best',\n",
-       " 'NetcdfSubset': 'https://thredds.ucar.edu/thredds/ncss/grib/NCEP/GFS/Global_0p25deg/Best',\n",
        " 'CdmRemote': 'https://thredds.ucar.edu/thredds/cdmremote/grib/NCEP/GFS/Global_0p25deg/Best',\n",
+       " 'JupyterNotebook': 'https://thredds.ucar.edu/thredds/notebook/grib/NCEP/GFS/Global_0p25deg/Best',\n",
+       " 'NetcdfSubset': 'https://thredds.ucar.edu/thredds/ncss/grid/grib/NCEP/GFS/Global_0p25deg/Best',\n",
+       " 'WMS': 'https://thredds.ucar.edu/thredds/wms/grib/NCEP/GFS/Global_0p25deg/Best',\n",
+       " 'WCS': 'https://thredds.ucar.edu/thredds/wcs/grib/NCEP/GFS/Global_0p25deg/Best',\n",
+       " 'ISO': 'https://thredds.ucar.edu/thredds/iso/grib/NCEP/GFS/Global_0p25deg/Best',\n",
        " 'NCML': 'https://thredds.ucar.edu/thredds/ncml/grib/NCEP/GFS/Global_0p25deg/Best',\n",
-       " 'UDDC': 'https://thredds.ucar.edu/thredds/uddc/grib/NCEP/GFS/Global_0p25deg/Best',\n",
-       " 'ISO': 'https://thredds.ucar.edu/thredds/iso/grib/NCEP/GFS/Global_0p25deg/Best'}"
+       " 'UDDC': 'https://thredds.ucar.edu/thredds/uddc/grib/NCEP/GFS/Global_0p25deg/Best'}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -463,7 +465,7 @@
       "application/javascript": [
        "\n",
        "            setTimeout(function() {\n",
-       "                var nbb_cell_id = 13;\n",
+       "                var nbb_cell_id = 9;\n",
        "                var nbb_unformatted_code = \"bestDS.access_urls\";\n",
        "                var nbb_formatted_code = \"bestDS.access_urls\";\n",
        "                var nbb_cells = Jupyter.notebook.get_cells();\n",
@@ -500,9 +502,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "query_gfs",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "query_gfs"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -514,7 +516,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
