--- a/data/OpenSeaMap/Geoserver-Seamarks.ipynb
+++ b/data/OpenSeaMap/Geoserver-Seamarks.ipynb
@@ -238,19 +238,12 @@
     "    'port':\"5432\",\n",
     "    'database': \"geoserver\",\n",
     "    'user':\"geonode-postgres-admin\",\n",
-    "    'passwd':\"geonode-postgres-admin-passport\",\n",
+    "    'passwd':\"passport\",\n",
     "    'dbtype':\"postgis\",\n",
     "    'Expose primary keys': 'true' \n",
     "})\n",
     "\n",
-    "#     host=\"db\",\n",
-    "#     port=\"5432\",\n",
-    "#     database=\"geoserver\",\n",
-    "#     user=\"geonode-postgres-admin\",\n",
-    "#     passwd=\"geonode-postgres-admin-passport\",\n",
-    "#     dbtype=\"postgis\",\n",
-    "#     schema='public',\n",
-    "#     'Expose primary keys'= 'true')\n",
+    "\n",
     "\n",
     "cat.save(st)\n"
    ]
