modified zarr files uploading using s3fs

--- a/data/zarr/s3.ipynb
+++ b/data/zarr/s3.ipynb
@@ -187,25 +187,32 @@
     "import xarray as xr\n",
     "import fsspec\n",
     "\n",
+    "#load the environment variables from .env file\n",
     "load_dotenv()\n",
     "\n",
+    "#load netCDF4 file using xarray \n",
     "ds = xr.open_dataset(\"./data/simu_alternateWaves_20230421_20230425.nc\", engine=\"netcdf4\")\n",
     "\n",
-    "zarr_store = './zarr/'\n",
-    "bucket = '52n-maridata'\n",
-    "#\n",
     "#   https://s3fs.readthedocs.io/en/latest/api.html#s3fs.core.S3FileSystem\n",
     "#   https://github.com/fsspec/s3fs/blob/main/s3fs/core.py\n",
-    "#\n",
-    "s3_fs = s3fs.S3FileSystem(\n",
-    "    key=os.getenv('AWS_ACCESS_KEY_ID'),\n",
-    "    secret=os.getenv('AWS_SECRET_ACCESS_KEY'),\n",
-    "    client_kwargs={'region_name': os.getenv('AWS_BUCKET_REGION')})\n",
-    "#\n",
+    "\n",
+    "#Setup the s3 file system by providing necessary credentials\n",
+    "s3 = s3fs.S3FileSystem(key=os.getenv('AWS_ACCESS_KEY_ID'), \n",
+    "                       secret=os.getenv('AWS_SECRET_ACCESS_KEY'),client_kwargs={'region_name':os.getenv('AWS_BUCKET_REGION')})\n",
+    "\n",
+    "#s3.ls('52n-maridata') #check the bucket in s3 file system\n",
+    "#provide the bucket name and the zarr prefix for s3\n",
+    "bucket = '52n-maridata'\n",
+    "zarr_prefix = 'opendatacube/zarr/forecast/waves/'\n",
+    "\n",
+    "#create store using S3Map method from s3fs library and save the dataset as a zarr directory/store in s3 bucket\n",
+    "store = s3fs.S3Map(root=f\"s3://{bucket}/{zarr_prefix}\", s3=s3)\n",
+    "ds.to_zarr(store=store, mode='w', consolidated=True) \n",
+    "\n",
     "#   List S3 bucket content\n",
     "#\n",
-    "zarr_prefix = 'opendatacube/zarr/forecast/waves/'\n",
-    "s3_fs.ls(f\"{bucket}/{zarr_prefix}\")\n",
+    "# zarr_prefix = 'opendatacube/zarr/forecast/waves/'\n",
+    "# s3_fs.ls(f\"{bucket}/{zarr_prefix}\")\n",
     "#\n",
     "# folder is created but not all the other files\n",
     "#with s3_fs.open(f\"{bucket}/{zarr_prefix}\", 'wb') as s3_folder:\n",
