Revert "Remove duplicate cell"
This reverts commit 7f9c0be6d0f5949b8082d7ba8697c206ee87f8c5.

--- a/data/zarr/s3.ipynb
+++ b/data/zarr/s3.ipynb
@@ -350,11 +350,97 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Saving Product metadata to the s3 bucket"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import boto3\n",
+    "import xarray as xr\n",
+    "import yaml\n",
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv() \n",
+    "\n",
+    "df = xr.open_dataset('./data/waves1.nc')\n",
+    "df\n",
+    "\n",
+    "# Define metadata\n",
+    "metadata = {\n",
+    "    'product': {\n",
+    "        'name': 'waves'\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "def var_measurements():\n",
+    "    measure = []\n",
+    "    for i in range(len(list(df.data_vars)[:-1])):\n",
+    "        a = {\n",
+    "            'name': str(list(df.data_vars)[:-1][i]),\n",
+    "            'dtype': str(df.data_vars[list(df.data_vars)[:-1][i]].dtype),\n",
+    "            'nodata': -999,\n",
+    "            'units': str(df.data_vars[list(df.data_vars)[:-1][i]].attrs['units']),\n",
+    "            'aliases': [str(df.data_vars[list(df.data_vars)[:-1][i]].attrs['standard_name'])]\n",
+    "            }\n",
+    "        measure.append(a)\n",
+    "    return measure\n",
+    "\n",
+    "# Define YAML data structure\n",
+    "data = {\n",
+    "    'name': 'waves',\n",
+    "    'metadata': metadata,\n",
+    "    'description': df.attrs['dataset'],\n",
+    "    'metadata_type': 'eo3',\n",
+    "    'measurements': var_measurements(),\n",
+    "    'storage':\n",
+    "        {'crs': 'EPSG:4326',\n",
+    "        'resolution': {'latitude' : 1.0,'longitude' : 1.0}\n",
+    "}}\n",
+    "\n",
+    "###### saving locally ###################\n",
+    "# class CustomDumper(yaml.Dumper):\n",
+    "#     def increase_indent(self, flow=False, indentless=False):\n",
+    "#         return super(CustomDumper, self).increase_indent(flow, False)\n",
+    "\n",
+    "# with open(f'eo3_{data[\"name\"]}_product.yaml', 'w') as file:\n",
+    "#     yaml.dump(data, file, default_flow_style=False, sort_keys=False, allow_unicode=True, Dumper=CustomDumper)\n",
+    "\n",
+    "\n",
+    "######## saving to S3 ###############\n",
+    "\n",
+    "# Convert data to YAML string\n",
+    "yaml_data = yaml.dump(data, default_flow_style=False, sort_keys=False, allow_unicode=True)\n",
+    "\n",
+    "\n",
+    "# Define S3 bucket and key\n",
+    "bucket_name = '52n-maridata'\n",
+    "key = f'opendatacube/zarr/forecast/waves/eo3_{data[\"name\"]}_product.yaml'\n",
+    "\n",
+    "# Upload YAML file to S3 bucket\n",
+    "session = boto3.Session(\n",
+    "    aws_access_key_id=os.environ.get('AWS_ACCESS_KEY_ID'), \n",
+    "    aws_secret_access_key=os.environ.get('AWS_SECRET_ACCESS_KEY'),\n",
+    "    region_name=os.environ.get('AWS_DEFAULT_REGION'))\n",
+    "\n",
+    "s3 = session.client('s3')\n",
+    "s3.put_object(Body=yaml_data, Bucket=bucket_name, Key=key)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Index metadata from s3 to the opendatacube\n",
+    "\n",
     "```\n",
     "datacube -v system init\n",
     "datacube product add s3://52n-maridata/opendatacube/zarr/forecast/waves/eo3_waves_product.yaml\n",
-    "datacube dataset add s3://52n-maridata/opendatacube/za```rr/forecast/waves/eo3_waves_dataset.yaml\n",
+    "datacube dataset add s3://52n-maridata/opendatacube/zarr/forecast/waves/eo3_waves_dataset.yaml\n",
     "``` "
    ]
   },
@@ -363,7 +449,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Import and initialize opendatacube"
+    "### Import and initialize opendatacube"
    ]
   },
   {
