added netCDF dataset source

--- a/data/zarr/s3.ipynb
+++ b/data/zarr/s3.ipynb
@@ -276,6 +276,8 @@
     "from dotenv import load_dotenv \n",
     "load_dotenv()\n",
     "\n",
+    "# Loading the global forecast netCDF dataset downloaded from Copernicus marine datasets\n",
+    "# https://data.marine.copernicus.eu/products\n",
     "df = xr.open_dataset('./data/waves1.nc')\n",
     "df\n",
     "\n",
