Add more instruction for env init

--- a/data/zarr/s3.ipynb
+++ b/data/zarr/s3.ipynb
@@ -20,7 +20,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install zarr boto3 dotenv xarray ipykernel"
+    "!python -m venv --prompt odc-s3-zarr .venv\n",
+    "!source .venv/bin/activate\n",
+    "%pip install zarr boto3 python-dotenv xarray ipykernel"
    ]
   },
   {
@@ -248,9 +250,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!git clone https://github.com/opendatacube/datacube-zarr\n",
-    "%pip install --upgrade gdal==3.4.1\n",
-    "%pip install --upgrade --editable \"./.[test]\""
+    "!git clone https://github.com/opendatacube/datacube-zarr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install GDAL==$(gdalinfo --version | awk '{print $2}' | awk -F, '{print $1}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "%pip install --upgrade --editable \"./datacube-zarr/.[test]\""
    ]
   },
   {
