--- a/data/zarr/s3.ipynb
+++ b/data/zarr/s3.ipynb
@@ -456,13 +456,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Index metadata from s3 to the opendatacube\n",
-    "\n",
-    "```\n",
-    "datacube -v system init\n",
-    "datacube product add s3://52n-maridata/opendatacube/zarr/forecast/waves/eo3_waves_product.yaml\n",
-    "datacube dataset add s3://52n-maridata/opendatacube/zarr/forecast/waves/eo3_waves_dataset.yaml\n",
-    "``` "
+    "## Index metadata from s3 to the opendatacube"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!datacube -v system init\n",
+    "!datacube product add s3://52n-maridata/opendatacube/zarr/forecast/waves/eo3_waves_product.yaml\n",
+    "!datacube dataset add s3://52n-maridata/opendatacube/zarr/forecast/waves/eo3_waves_dataset.yaml"
    ]
   },
   {
