--- a/data/zarr/s3.ipynb
+++ b/data/zarr/s3.ipynb
@@ -99,7 +99,7 @@
     "# https://docs.xarray.dev/en/stable/getting-started-guide/faq.html#id6\n",
     "# https://docs.xarray.dev/en/stable/generated/xarray.open_dataset.html#xarray.open_dataset\n",
     "#\n",
-    "ds = xr.open_dataset(\"./data/simu_alternateWaves_20230421_20230425.nc\", engine=\"netcdf4\")\n",
+    "ds = xr.open_dataset(\"./data/waves1.nc\", engine=\"netcdf4\", decode_coords='all')\n",
     "#\n",
     "# https://docs.xarray.dev/en/stable/user-guide/io.html#io-zarr\n",
     "# https://docs.xarray.dev/en/stable/generated/xarray.Dataset.to_zarr.html#xarray.Dataset.to_zarr\n",
@@ -133,7 +133,7 @@
     "\n",
     "load_dotenv()\n",
     "\n",
-    "ds = xr.open_dataset(\"./data/simu_alternateWaves_20230421_20230425.nc\", engine=\"netcdf4\")\n",
+    "ds = xr.open_dataset(\"./data/waves1.nc\", engine=\"netcdf4\", decode_coords='all')\n",
     "\n",
     "session = boto3.Session(aws_access_key_id=os.getenv('AWS_ACCESS_KEY_ID'),\n",
     "                        aws_secret_access_key=os.getenv('AWS_SECRET_ACCESS_KEY'),\n",
@@ -143,7 +143,9 @@
     "zarr_store = './zarr/'\n",
     "bucket = '52n-maridata'\n",
     "store = zarr.DirectoryStore(zarr_store)\n",
-    "\n",
+    "#\n",
+    "# https://docs.xarray.dev/en/stable/user-guide/io.html#consolidated-metadata\n",
+    "#\n",
     "ds.to_zarr(store=zarr_store, mode='w', consolidated=True)\n",
     "\n",
     "zarr_prefix = 'opendatacube/zarr/forecast/waves/'\n",
@@ -186,7 +188,7 @@
     "load_dotenv()\n",
     "\n",
     "#load netCDF4 file using xarray \n",
-    "ds = xr.open_dataset(\"./data/simu_alternateWaves_20230421_20230425.nc\", engine=\"netcdf4\")\n",
+    "ds = xr.open_dataset(\"./data/waves1.nc\", engine=\"netcdf4\", decode_cords='all')\n",
     "\n",
     "#   https://s3fs.readthedocs.io/en/latest/api.html#s3fs.core.S3FileSystem\n",
     "#   https://github.com/fsspec/s3fs/blob/main/s3fs/core.py\n",
@@ -202,6 +204,9 @@
     "\n",
     "#create store using S3Map method from s3fs library and save the dataset as a zarr directory/store in s3 bucket\n",
     "store = s3fs.S3Map(root=f\"s3://{bucket}/{zarr_prefix}\", s3=s3)\n",
+    "#\n",
+    "# https://docs.xarray.dev/en/stable/user-guide/io.html#consolidated-metadata\n",
+    "#\n",
     "ds.to_zarr(store=store, mode='w', consolidated=True) \n",
     "\n",
     "#   List S3 bucket content\n",
@@ -259,7 +264,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install GDAL==$(gdalinfo --version | awk '{print $2}' | awk -F, '{print $1}')"
+    "%pip install GDAL==$(gdalinfo --version | awk '{print $2}' | awk -F, '{print $1}') odc-apps-cloud odc-apps-dc-tools"
    ]
   },
   {
@@ -292,12 +297,13 @@
     "import uuid\n",
     "import yaml\n",
     "import boto3\n",
+    "import rioxarray\n",
     "from dotenv import load_dotenv \n",
     "load_dotenv()\n",
     "\n",
     "# Loading the global forecast netCDF dataset downloaded from Copernicus marine datasets\n",
     "# https://data.marine.copernicus.eu/products\n",
-    "df = xr.open_dataset('./data/waves1.nc')\n",
+    "df = xr.open_dataset('./data/waves1.nc', decode_coords='all')\n",
     "df\n",
     "\n",
     "# Generate a random UUID\n",
@@ -465,6 +471,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Alternative way of indexing datasets (requires some additional python packages to be installed)\n",
+    "s3-find \"s3://52n-maridata/opendatacube/*/*/*/*dataset.yaml\" | s3-to-tar | dc-index-from-tar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "!datacube -v system init\n",
     "!datacube product add s3://52n-maridata/opendatacube/zarr/forecast/waves/eo3_waves_product.yaml\n",
     "!datacube dataset add s3://52n-maridata/opendatacube/zarr/forecast/waves/eo3_waves_dataset.yaml"
@@ -539,7 +555,8 @@
    "outputs": [],
    "source": [
     "a=measurement_list.to_dict()\n",
-    "vars= list(a['name'].values())"
+    "vars= list(a['name'].values())\n",
+    "vars"
    ]
   },
   {
@@ -556,7 +573,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds_datacube = dc.load('waves',measurements=list(a['name'].values()),output_crs = \"epsg:4326\",resolution = (1, 1),align = (0.5, 0.5),crs='EPSG:4326')\n",
+    "ds_datacube = dc.load('waves', measurements=list(a['name'].values()), output_crs=\"epsg:4326\", resolution=(1, 1), align=(0.5, 0.5),crs='EPSG:4326')\n",
     "ds_datacube"
    ]
   },
@@ -581,6 +598,49 @@
     "    fig = plt.figure(figsize=(8, 6))\n",
     "    ds_datacube[var].plot()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import xarray\n",
+    "\n",
+    "nc = xarray.open_dataset('./data/waves1.nc', engine=\"netcdf4\")\n",
+    "nc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import xarray\n",
+    "\n",
+    "zarr = xarray.open_zarr('s3://52n-maridata/opendatacube/zarr/forecast/waves/')\n",
+    "zarr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "zarr.attrs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zarr.data_vars['spatial_ref']"
    ]
   }
  ],
