correct typos notebook

--- a/data/maridatadownloader/notebooks/wind_speed_using_GFS.ipynb
+++ b/data/maridatadownloader/notebooks/wind_speed_using_GFS.ipynb
@@ -5,23 +5,7 @@
    "id": "d3da7199",
    "metadata": {},
    "source": [
-    "# Demo notebook for using maridatadownloader"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "31c3a8e8",
-   "metadata": {},
-   "source": [
-    "# Table of content <a class=\"anchor\" id=\"toc\"></a>\n",
-    "\n",
-    "* [1) GFS](#gfs)\n",
-    "    * [1.1) Create downloader object](#gfs-init)\n",
-    "    * [1.2) Download data as datacube](#gfs-datacube)\n",
-    "    * [1.3) Download data along trajectory](#gfs-trajectory)\n",
-    "* [2) CMEMS](#cmems)\n",
-    "    * [1.1) Create downloader object](#cmems-init)\n",
-    "    * [1.2) Download data as datacube](#cmems-datacube)"
+    "# Update csv wind speed data using GFS"
    ]
   },
   {
@@ -3620,6 +3604,7 @@
     }
    ],
    "source": [
+    "# Try to sample points from a raster\n",
     "# Define paths to your NetCDF file and CSV file\n",
     "nc_path = \"./gfs_bbox.nc\"\n",
     "csv_path = \"./common_values.csv\"\n",
