Support interpolation also for archived GFS data

--- a/data/maridatadownloader/notebooks/demo.ipynb
+++ b/data/maridatadownloader/notebooks/demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d3da7199",
+   "id": "eaac0f21",
    "metadata": {},
    "source": [
     "# Demo notebook for using maridatadownloader"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31c3a8e8",
+   "id": "147a6756",
    "metadata": {},
    "source": [
     "# Table of content <a class=\"anchor\" id=\"toc\"></a>\n",
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99fd5303",
+   "id": "f802aeba",
    "metadata": {},
    "source": [
     "---"
@@ -41,7 +41,9 @@
    "source": [
     "import os\n",
     "import time\n",
+    "from datetime import datetime, timezone, timedelta\n",
     "\n",
+    "import folium\n",
     "import getpass\n",
     "import numpy as np\n",
     "import rioxarray\n",
@@ -80,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c754e3a",
+   "id": "ded5c246",
    "metadata": {},
    "source": [
     "## 1.1) Create downloader object <a class=\"anchor\" id=\"gfs-init\"></a>\n",
@@ -109,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fd030d6",
+   "id": "785231cc",
    "metadata": {},
    "source": [
     "## 1.2) Download data as datacube <a class=\"anchor\" id=\"gfs-datacube\"></a>\n",
@@ -124,8 +126,8 @@
    "outputs": [],
    "source": [
     "# Configuration for downloading as cube\n",
-    "time_min = \"2023-07-30 11:00:00\"\n",
-    "time_max = \"2023-07-30 16:00:00\"\n",
+    "time_min = \"2023-09-20 11:00:00\"\n",
+    "time_max = \"2023-09-20 16:00:00\"\n",
     "\n",
     "lon_min=-180\n",
     "lon_max=180\n",
@@ -138,6 +140,7 @@
     "parameters = [\"Temperature_surface\", \"Pressure_reduced_to_MSL_msl\", \"Wind_speed_gust_surface\", \n",
     "              \"u-component_of_wind_height_above_ground\", \"v-component_of_wind_height_above_ground\"]\n",
     "\n",
+    "sel_dict = {'time': slice(time_min, time_max), 'time1': slice(time_min, time_max)}\n",
     "sel_dict = {'time': slice(time_min, time_max), 'time1': slice(time_min, time_max)}\n",
     "#sel_dict = {'time': slice(time_min, time_max), 'time1': slice(time_min, time_max), \n",
     "#            'height_above_ground2': slice(height_min, height_max)}"
@@ -184,7 +187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9c6711d",
+   "id": "1a258c70",
    "metadata": {},
    "source": [
     "### Calculate difference "
@@ -212,7 +215,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd3ffa27",
+   "id": "e85de5d5",
    "metadata": {},
    "source": [
     "## 1.3) Download data along trajectory <a class=\"anchor\" id=\"gfs-trajectory\"></a>\n",
@@ -220,61 +223,170 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "97e2bf11",
+   "metadata": {},
+   "source": [
+    "References:\n",
+    " - https://docs.xarray.dev/en/latest/user-guide/interpolation.html#advanced-interpolation\n",
+    " - https://earth-env-data-science.github.io/lectures/xarray/xarray-part2.html\n",
+    " - https://xesmf.readthedocs.io/en/stable/\n",
+    " - https://stackoverflow.com/questions/56144678/xarray-point-interpolation-on-multiple-dimensions\n",
+    " - https://stackoverflow.com/questions/72179103/xarray-select-the-data-at-specific-x-and-y-coordinates"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab42b2d1",
+   "id": "b3341ba7",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Configuration for downloading along trajectory\n",
-    "# https://stackoverflow.com/questions/72179103/xarray-select-the-data-at-specific-x-and-y-coordinates\n",
     "lons = [2.81, 3.19, 4.56, 6.67, 6.68]\n",
     "lats = [51.9, 53.0, 54.0, 54.3, 55.5]\n",
-    "times = [\"2023-07-30 09:00:00\",\n",
-    "         \"2023-07-30 11:00:00\",\n",
-    "         \"2023-07-30 13:00:00\",\n",
-    "         \"2023-07-30 15:00:00\",\n",
-    "         \"2023-07-30 17:00:00\"]\n",
+    "\n",
+    "times = [datetime.strptime(\"2023-09-20 09:00:00\", '%Y-%m-%d %H:%M:%S'),\n",
+    "         datetime.strptime(\"2023-09-20 11:00:00\", '%Y-%m-%d %H:%M:%S'),\n",
+    "         datetime.strptime(\"2023-09-20 13:00:00\", '%Y-%m-%d %H:%M:%S'),\n",
+    "         datetime.strptime(\"2023-09-20 15:00:00\", '%Y-%m-%d %H:%M:%S'),\n",
+    "         datetime.strptime(\"2023-09-20 17:00:00\", '%Y-%m-%d %H:%M:%S')]\n",
+    "\n",
+    "#times = [\"2023-09-28 09:00:00\",\n",
+    "#         \"2023-09-28 11:00:00\",\n",
+    "#         \"2023-09-28 13:00:00\",\n",
+    "#         \"2023-09-28 15:00:00\",\n",
+    "#         \"2023-09-28 17:00:00\"]\n",
+    "\n",
+    "height = 10\n",
     "\n",
     "parameters = [\"Temperature_surface\", \"Pressure_reduced_to_MSL_msl\", \"Wind_speed_gust_surface\", \n",
     "              \"u-component_of_wind_height_above_ground\", \"v-component_of_wind_height_above_ground\"]\n",
-    "                 \n",
+    "\n",
     "x = xarray.DataArray(lons, dims=['trajectory'])\n",
     "y = xarray.DataArray(lats, dims=['trajectory'])\n",
     "t = xarray.DataArray(times, dims=['trajectory'])\n",
     "\n",
-    "sel_dict = {'time': t, 'time1': t, 'lon': x, 'lat': y}"
+    "sel_dict = {'time1': t, 'longitude': x, 'latitude': y, 'height_above_ground2': height}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ebee93d9",
+   "id": "b6dbf50e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds_trajectory = gfs.dataset.sel(sel_dict, method=\"backfill\")\n",
-    "ds_trajectory"
+    "%%time\n",
+    "dataset_gfs_trajectory = gfs.download(parameters=parameters, sel_dict=sel_dict, interpolate=True)\n",
+    "dataset_gfs_trajectory"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9fe688a",
+   "id": "a23e6e1c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds_trajectory['trajectory']"
+    "dataset_gfs_trajectory.Temperature_surface.plot();"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a50a530",
+   "id": "779da152",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds_trajectory['Temperature_surface'].plot()"
+    "df_trajectory = dataset_gfs_trajectory.to_dataframe()\n",
+    "df_trajectory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4b85d56b",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "m = folium.Map(location=(np.mean(y).item(), np.mean(x).item()), zoom_start=6)\n",
+    "\n",
+    "for idx, row in df_trajectory.iterrows():\n",
+    "    html = f\"\"\"\n",
+    "    <b>Point {idx+1}<b/>\n",
+    "    <table style=\"width:100%\">\n",
+    "      <tr>\n",
+    "        <th>Latitude</th>\n",
+    "        <th>{row['latitude']}</th>\n",
+    "      </tr>\n",
+    "      <tr>\n",
+    "        <th>Longitude</th>\n",
+    "        <th>{row['longitude']}</th>\n",
+    "      </tr>\n",
+    "      <tr>\n",
+    "        <th>Time</th>\n",
+    "        <th>{row['time']}</th>\n",
+    "      </tr>\n",
+    "      <tr>\n",
+    "        <th>Temperature_surface</th>\n",
+    "        <th>{row['Temperature_surface']}</th>\n",
+    "      </tr>\n",
+    "      <tr>\n",
+    "        <th>Pressure_reduced_to_MSL_msl</th>\n",
+    "        <th>{row['Pressure_reduced_to_MSL_msl']}</th>\n",
+    "      </tr>\n",
+    "      <tr>\n",
+    "        <th>Wind_speed_gust_surface</th>\n",
+    "        <th>{row['Wind_speed_gust_surface']}</th>\n",
+    "      </tr>\n",
+    "      <tr>\n",
+    "        <th>u-component_of_wind_height_above_ground</th>\n",
+    "        <th>{row['u-component_of_wind_height_above_ground']}</th>\n",
+    "      </tr>\n",
+    "      <tr>\n",
+    "        <th>v-component_of_wind_height_above_ground</th>\n",
+    "        <th>{row['v-component_of_wind_height_above_ground']}</th>\n",
+    "      </tr>\n",
+    "    </table>\n",
+    "    \"\"\"\n",
+    "    folium.Marker(\n",
+    "        location=[row['latitude'], row['longitude']],\n",
+    "        tooltip=html,\n",
+    "        popup=html,\n",
+    "    ).add_to(m)\n",
+    "m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f732a26b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#idx = 0\n",
+    "#point = gfs.dataset.Temperature_surface.sel(\n",
+    "#    time=dataset_gfs_trajectory['trajectory'].time[idx].values,\n",
+    "#    lon=dataset_gfs_trajectory['trajectory'].lon[idx].values,\n",
+    "#    lat=dataset_gfs_trajectory['trajectory'].lat[idx].values,\n",
+    "#    method='nearest'\n",
+    "#)\n",
+    "#print(point.values)\n",
+    "#print(dataset_gfs_trajectory.Temperature_surface.values[idx])\n",
+    "#point"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9feb6f49",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset_gfs_trajectory.Temperature_surface.sel(time=dataset_gfs_trajectory['trajectory'].time[0].values).plot()"
    ]
   },
   {
@@ -296,7 +408,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c9ad8c1",
+   "id": "e7b24387",
    "metadata": {},
    "source": [
     "## 2.1) Create downloader object <a class=\"anchor\" id=\"cmems-init\"></a>\n",
@@ -351,7 +463,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "127077ff",
+   "id": "fced78b9",
    "metadata": {},
    "source": [
     "## 2.2) Download data as datacube <a class=\"anchor\" id=\"cmems-datacube\"></a>\n",
@@ -365,19 +477,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "time_min = \"2023-05-24T12:00:00\"\n",
-    "time_max = \"2023-05-24T18:00:00\"\n",
+    "time_min = \"2023-08-29T02:30:00\"\n",
+    "time_max = \"2023-08-29T02:30:00\"\n",
     "\n",
     "lon_min=-180\n",
     "lon_max=180\n",
     "lat_min=-90\n",
     "lat_max=90\n",
     "\n",
-    "parameters = [\"VHM0\", \"VMDR\", \"VTPK\"]\n",
+    "#parameters = [\"VHM0\", \"VMDR\", \"VTPK\"]\n",
     "#parameters = [\"uo\",\"vo\",\"vsdx\",\"vsdy\",\"utide\",\"vtide\",\"utotal\",\"vtotal\"]\n",
-    "#parameters = [\"so\"]\n",
+    "parameters = [\"so\", \"zos\", \"thetao\"]\n",
     "\n",
     "sel_dict = {'time': slice(time_min, time_max)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d27d47a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#cmems.dataset = cmems.dataset.sortby('time')"
    ]
   },
   {
@@ -392,8 +514,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "427dbff1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset_cmemcs"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "f778dc8d",
+   "id": "7538672a",
    "metadata": {},
    "source": [
     "### Check ocean currents contributions"
@@ -436,7 +568,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
